Add warning suppression

--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ checkerFramework {
   checkers = [
     'org.checkerframework.checker.optional.OptionalChecker',
   ]
+  extraJavacArgs = [
+    '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno'
+  ]
 }
 
 // Set the groupId as it helps with Maven
