Annotating warnings and errors away

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,8 @@ checkerFramework {
     'org.checkerframework.checker.optional.OptionalChecker',
   ]
   extraJavacArgs = [
-    '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno'
+    '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
+    '-AassumePure'
   ]
 }
 
