--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ plugins {
     id "com.dorongold.task-tree" version '2.1.1'        // Prints the task dependency tree
     id 'org.openjfx.javafxplugin' version '0.0.14'      // JavaFX support
     id 'org.beryx.runtime' version '1.13.0'             // Creates custom runtimes
+    id "net.ltgt.errorprone" version "3.1.0"
 }
 
 /**
@@ -278,6 +279,7 @@ dependencies {
 
     testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version:'2.9.1'
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
+    errorprone("com.google.errorprone:error_prone_core:2.23.0")
 }
 
 // Properties to support Ant builds
@@ -902,6 +904,16 @@ dependencyUpdates.resolutionStrategy {
         }
     }
 }
+
+
+ tasks.withType(JavaCompile).configureEach {
+   options.errorprone.disableWarningsInGeneratedCode = true
+   options.errorprone.disableAllChecks = true
+   options.errorprone.enable("NullOptional", "NullableOptional",
+     "OptionalMapToOptional", "OptionalNotPresent", "OptionalEquality",
+     "OptionalMapUnusedValue", "OptionalOfRedundantMethod", "UnnecessaryOptionalGet",
+   )
+ }
 
 // Support for creating IntelliJ IDEA files.
 idea {
