--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ plugins {
     id 'application'                                    // Creating application bundles
     id 'build-dashboard'                                // Produces a build report
     id 'checkstyle'                                     // Checkstyle for Java, configured further below
-    id "com.github.spotbugs" version '5.1.3'           // Spotbugs for Java
+    id "com.github.spotbugs" version '5.2.5'           // Spotbugs for Java
     id 'java'                                           // Core java / javac
     id 'maven-publish'                                  // Publishing to Maven Central
     id 'pmd'                                            // PMD for Java, configured further below
@@ -263,7 +263,7 @@ dependencies {
 
     compileOnly group: 'org.jetbrains', name: 'annotations', version:'24.0.1'
     compileOnly group: 'com.yuvimasory', name: 'orange-extensions', version: '1.3.0'
-    compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.7.3'
+    // compileOnly group: 'com.github.spotbugs', name: 'spotbugs-annotations', version: '4.7.3'
 
     testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.10.0'
     testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.10.0'
@@ -277,7 +277,6 @@ dependencies {
     testImplementation group: 'org.testfx', name: 'openjfx-monocle', version: 'jdk-12.0.1+2'
 
     testImplementation group: 'org.xmlunit', name: 'xmlunit-matchers', version:'2.9.1'
-    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.12.0'
 }
 
 // Properties to support Ant builds
@@ -940,3 +939,11 @@ apply from: 'code/gradle/autobuild.gradle'
 apply from: 'code/gradle/distribution.gradle'
 apply from: 'code/gradle/reporting.gradle'
 apply from: 'code/gradle/release.gradle'
+
+spotbugs {
+     ignoreFailures = true
+     toolVersion = '4.8.2'
+     effort = 'default'
+     reportLevel = 'default'
+     reportsDir = file("$buildDir/spotbugs")
+ }
