Make buildfile consistent with annotated branch

--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,11 @@ checkerFramework {
     'org.checkerframework.checker.optional.OptionalChecker',
   ]
   extraJavacArgs = [
-    '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno'
-  ]
+    '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
+    '-AassumePure',
+    '-AwarnUnneededSuppressions'
+   ]
+   excludeTests = true
 }
 
 // Set the groupId as it helps with Maven
