Use Checker Framework version 3.41.1-SNAPSHOT

--- a/PCGen-Formula/build.gradle
+++ b/PCGen-Formula/build.gradle
@@ -40,6 +40,7 @@ repositories {
         url 'http://pc-gen.org/librepo'
 	allowInsecureProtocol true
     }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
