--- a/PCGen-base/build.gradle
+++ b/PCGen-base/build.gradle
@@ -34,6 +34,7 @@ ext {
 
 repositories {
     mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
