Adding -AassumeAssertionsAreEnabled flag

--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,8 @@ checkerFramework {
   extraJavacArgs = [
     '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
     '-AassumePure',
-    '-AwarnUnneededSuppressions'
+    '-AwarnUnneededSuppressions',
+    '-AassumeAssertionsAreEnabled'
   ]
   excludeTests = true
 }
