Adding -AassumeAssertionsAreEnabled flag

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ checkerFramework {
     '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
     '-AassumePure',
     '-AwarnUnneededSuppressions',
+    '-AassumeAssertionsAreEnabled',
   ]
   excludeTests = true
 }
