--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ checkerFramework {
     '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
     '-AassumePure',
     '-AwarnUnneededSuppressions',
-    '-AassumeAssertionsAreEnabled'
+    '-AassumeAssertionsAreEnabled',
   ]
   excludeTests = true
 }
