Adding Optional Counting config changes

--- a/build.gradle
+++ b/build.gradle
@@ -61,12 +61,14 @@ javafx {
 checkerFramework {
   checkers = [
     'org.checkerframework.checker.optional.OptionalChecker',
+    'org.checkerframework.common.util.report.ReportChecker',
   ]
   extraJavacArgs = [
     '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
     '-AassumePure',
     '-AwarnUnneededSuppressions',
     '-AassumeAssertionsAreEnabled',
+    "-Astubs=${project.projectDir}/reportoptional.astub",
   ]
   excludeTests = true
 }
@@ -965,3 +967,9 @@ apply from: 'code/gradle/distribution.gradle'
 apply from: 'code/gradle/reporting.gradle'
 apply from: 'code/gradle/release.gradle'
 apply plugin: 'org.checkerframework'
+
+afterEvaluate {
+     tasks.withType(JavaCompile) {
+         options.compilerArgs << "-Xmaxerrs" << "99999"
+     }
+ }
