--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ javafx {
 checkerFramework {
   checkers = [
     'org.checkerframework.checker.optional.OptionalChecker',
-    'org.checkerframework.common.util.report.ReportChecker',
+    'org.checkerframework.common.util.count.report.ReportChecker',
   ]
   extraJavacArgs = [
     '-AsuppressWarnings=type.anno.before.modifier,type.anno.before.decl.anno',
