Adding -AReportChecker_warns flag

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ checkerFramework {
     '-AassumePure',
     '-AwarnUnneededSuppressions',
     '-AassumeAssertionsAreEnabled',
+    '-AReportChecker_warns',
     "-Astubs=${project.projectDir}/reportoptional.astub",
   ]
   excludeTests = true
@@ -971,5 +972,6 @@ apply plugin: 'org.checkerframework'
 afterEvaluate {
      tasks.withType(JavaCompile) {
          options.compilerArgs << "-Xmaxerrs" << "99999"
+         options.compilerArgs << "-Xmaxwarns" << "99999"
      }
  }
