Update build file

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ checkerFramework {
     '-AwarnUnneededSuppressions',
     '-AassumeAssertionsAreEnabled',
     '-AReportChecker_warns',
+    "-Xmaxwarns", "99999",
     "-Astubs=${project.projectDir}/reportoptional.astub",
   ]
   excludeTests = true
