--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ checkerFramework {
   ]
   excludeTests = true
 }
-ext.checkerFrameworkVersion = '3.41.1-SNAPSHOT'
+ext.checkerFrameworkVersion = '3.42.0'
 dependencies {
   compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
   testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
