--- a/build.gradle
+++ b/build.gradle
@@ -70,12 +70,21 @@ checkerFramework {
   ]
   excludeTests = true
 }
-ext.checkerFrameworkVersion = '3.42.0'
-dependencies {
-  compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
-  testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
-  checkerFramework "org.checkerframework:checker:${checkerFrameworkVersion}"
+// To use a locally-built Checker Framework, run gradle with "-PcfLocal".
+if (project.hasProperty("cfLocal")) {
+    def cfHome = String.valueOf(System.getenv("CHECKERFRAMEWORK"))
+    dependencies {
+        compileOnly files(cfHome + "/checker/dist/checker-qual.jar")
+        testCompileOnly files(cfHome + "/checker/dist/checker-qual.jar")
+        checkerFramework files(cfHome + "/checker/dist/checker.jar")
+    }
 }
+// ext.checkerFrameworkVersion = '3.42.0'
+// dependencies {
+//   compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
+//   testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
+//   checkerFramework "org.checkerframework:checker:${checkerFrameworkVersion}"
+// }
 configurations.all {
   resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
